# crewaAI-practice

./: README.md
my_new_flow/: README.md  pyproject.toml
my_new_flow/name_of_flow/: README.md  pyproject.toml
my_new_flow/name_of_flow/src/name_of_flow/: main.py
